--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 :root {
     --font-color: #A8A393;
     --font-family: 'Roboto Condensed', sans-serif;
+    --font-family-bebas: 'Bebas Neue', cursive;
 }
 
 * {
@@ -107,6 +107,118 @@ header {
 
 .nav-responsive i {
     color: var(--font-color);
+    font-size: 2rem;
+}
+
+/* Hero-img */
+
+.hero-img {
+    width: 100%;
+    height: 100%;
+}
+
+
+
+/* Tour */
+
+.tour {
+    background-image: url(img/tour_img.webp);
+    background-size: cover;
+    /* height: 500px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.tour-container {
+    width: 70%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 50px 0;
+}
+
+.tour-container h2 {
+    text-shadow: 3px 3px #c76037;
+    color: #DBB52F;
+    text-transform: uppercase;
+    font-size: 4rem;
+    font-family: var(--font-family-bebas);
+    font-weight: 100;
+}
+
+.show {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    /* border: solid 1px black; */
+    width: 100%;
+    padding: 20px;    
+    text-transform: uppercase;
+    font-family: var(--font-family-bebas);
+    color: white;
+    
+}
+
+.tour-place {
+    width: 300px;
+    letter-spacing: 3px;;
+}
+
+.tour-place p {
+    line-height: 1;
+}
+
+.tour-date {
+    line-height: 1;
+    text-align: center;
+}
+
+.month {
+    font-size: 4rem;
+    text-shadow: 3px 3px #c76037;
+    color: #DBB52F;
+}
+
+.day {
+    text-shadow: 3px 3px #c76037;
+    color: #DBB52F;
+    font-size: 4rem;
+}
+
+.auditorium {
+    font-size: 3rem;
+}
+
+.city {
+    font-size: 2rem;
+}
+
+.buy-tickets {
+    padding: 10px 40px;
+    background-color: #DBB52F;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 3px 3px #c76037;
+    cursor:pointer;
+    text-transform: uppercase;
+    transition: 0.4s;
+}
+
+.buy-tickets:hover {
+    box-shadow: 3px 3px black;
+    background-color: #c76037;
+    color:white;
+}
+
+.all-dates {
+    border: solid 2px #DBB52F; 
+    padding: 5px 15px;
+    color: #DBB52F;
+    text-transform: uppercase;
+    font-family: var(--font-family-bebas);
     font-size: 2rem;
 }
 
