--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+
 :root {
     --font-color: #A8A393;
     --font-family: 'Roboto Condensed', sans-serif;
@@ -21,7 +22,10 @@ header {
     align-items: center;
     text-transform: uppercase;
     font-size: 14px;
-    font-family: var(--font-family)
+    font-family: var(--font-family);
+    position: fixed;
+    width: 100%;
+    z-index: 100;
 }
 
 .logo {
@@ -112,9 +116,15 @@ header {
 
 /* Hero-img */
 
+.hero {
+    background-color: black;
+    padding-top: 50px;
+}
+
 .hero-img {
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    margin-bottom: 50px;
 }
 
 
@@ -124,12 +134,13 @@ header {
 .tour {
     background-image: url(img/tour_img.webp);
     background-size: cover;
-    /* height: 500px; */
+    padding: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
+
 .tour-container {
     width: 70%;
     height: auto;
@@ -155,16 +166,17 @@ header {
     justify-content: space-around;
     /* border: solid 1px black; */
     width: 100%;
-    padding: 20px;    
+    padding: 20px;
     text-transform: uppercase;
     font-family: var(--font-family-bebas);
     color: white;
-    
+
 }
 
 .tour-place {
     width: 300px;
-    letter-spacing: 3px;;
+    letter-spacing: 3px;
+    ;
 }
 
 .tour-place p {
@@ -202,7 +214,7 @@ header {
     border-radius: 10px;
     border: none;
     box-shadow: 3px 3px #c76037;
-    cursor:pointer;
+    cursor: pointer;
     text-transform: uppercase;
     transition: 0.4s;
 }
@@ -210,17 +222,115 @@ header {
 .buy-tickets:hover {
     box-shadow: 3px 3px black;
     background-color: #c76037;
-    color:white;
+    color: white;
 }
 
 .all-dates {
-    border: solid 2px #DBB52F; 
+    border: solid 2px #DBB52F;
     padding: 5px 15px;
     color: #DBB52F;
     text-transform: uppercase;
     font-family: var(--font-family-bebas);
     font-size: 2rem;
 }
+
+/* News */
+
+.news {
+    background-color: #202020;
+    /* height: 100vh; */
+    padding: 40px;
+}
+
+.news h2 {
+    font-family: var(--font-family-bebas);
+    text-align: center;
+    font-size: 5rem;
+    font-weight: 100;
+    letter-spacing: 3px;
+    color: #DBB52F;
+    text-shadow: 3px 3px #c76037;
+}
+
+.news-container {
+    width: 60%;
+    height: auto;
+    margin: auto;
+}
+
+.section-news-title {
+    font-size: 3rem;
+    font-family: var(--font-family-bebas);
+    text-transform: lowercase;
+    color: #DBB52F;
+    text-shadow: 3px 3px #c76037;
+}
+
+.news-post {
+    height: 350px;
+    width: 75%;
+    margin: auto;
+    margin-bottom: 20px;
+    padding: 20px;
+    background-color: #472C2A;
+    color: white;
+    position: relative;
+}
+
+.news-title {
+    color: white;
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-family: var(--font-family-bebas);
+    font-weight: 100;
+    letter-spacing: 2px;
+}
+
+.news-post img {
+    max-width: 310px;
+    float: left;
+    margin-right: 20px;
+}
+
+.news-description {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.news-text p {
+    line-height: 30px;
+    font-family: var(--font-family);
+}
+
+.news-sign {
+    background-color: #DBB52F;
+    color: black;
+    text-transform: uppercase;
+    font-weight: lighter;
+    font-size: 1.2rem;
+    font-family: var(--font-family-bebas);
+    text-align: center;
+    width: 50px;
+    height: 35px;
+    padding: 5px;
+    position: absolute;
+    right: -20px;
+    
+}
+
+
+
+.news-sign:after {
+    border-color: #283126 transparent transparent;
+    border-style: solid;
+    border-width: 1em 1em 0 0;
+    bottom: -1em;
+    content: "";
+    display: block;
+    position: absolute;
+    right: 0;
+}
+
 
 
 
@@ -251,7 +361,7 @@ header {
         background-color: black;
         right: 0;
         top: 90px;
-        width: 200px;        
+        width: 200px;
         max-height: 0px;
         overflow: hidden;
         transition: 0.4s;
@@ -268,7 +378,7 @@ header {
     */
 
     .nav-responsive-active {
-        
+
         max-height: 500px;
     }
 }
