--- a/style.css
+++ b/style.css
@@ -53,10 +53,16 @@ header {
     text-decoration: none;
 }
 
+.login-nav a:hover {
+    color:#c76037;
+}
+
 
 .email {
     background-color: transparent;
     border: none;
+    color:whitesmoke;
+    padding: 5px;
 }
 
 .email::placeholder {
@@ -83,6 +89,11 @@ header {
     color: var(--font-color);
     padding: 6px;
     font-size: 16px;
+    cursor:pointer;
+}
+
+.social i:hover {
+    color: #DBB52F;
 }
 
 .main-menu {
@@ -98,6 +109,11 @@ header {
     font-size: 24px;
     font-weight: 600;
     color: var(--font-color);
+    transition: 0.4s;
+}
+
+.main-menu a:hover {
+    color: white;
 }
 
 .main-menu a:first-child {
@@ -118,7 +134,7 @@ header {
 
 .hero {
     background-color: black;
-    padding-top: 50px;
+    padding-top: 100px;
 }
 
 .hero-img {
@@ -232,6 +248,12 @@ header {
     text-transform: uppercase;
     font-family: var(--font-family-bebas);
     font-size: 2rem;
+    cursor: pointer;
+}
+
+.all-dates:hover {
+    border-color:white;
+    color:white;
 }
 
 /* News */
@@ -240,6 +262,10 @@ header {
     background-color: #202020;
     /* height: 100vh; */
     padding: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .news h2 {
@@ -315,10 +341,8 @@ header {
     padding: 5px;
     position: absolute;
     right: -20px;
-    
+
 }
-
-
 
 .news-sign:after {
     border-color: #283126 transparent transparent;
@@ -329,6 +353,136 @@ header {
     display: block;
     position: absolute;
     right: 0;
+}
+
+.all-news {
+    border: solid 2px #DBB52F;
+    padding: 5px 15px;
+    color: #DBB52F;
+    text-transform: uppercase;
+    font-family: var(--font-family-bebas);
+    font-size: 2rem;
+    text-decoration: none;
+}
+
+.all-news:hover {
+    border-color: white;
+    color: white;;
+}
+
+/* Multimedia */
+
+.multimedia {
+    background-image: url(img/2017_1130_2506_7561.webp);
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 30px;
+}
+
+.multimedia-spotify {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.multimedia-youtube {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.multimedia-title {
+    color: #DBB52F;
+    text-shadow: 3px 3px #c76037;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 3rem;
+    margin-bottom: 20px;
+}
+
+.multimedia-more {
+    border: solid 2px #DBB52F;
+    padding: 5px 15px;
+    color: #DBB52F;
+    text-transform: uppercase;
+    font-family: var(--font-family-bebas);
+    font-size: 2rem;
+    text-decoration: none;
+    margin-top: 20px;
+}
+
+.multimedia-more:hover {
+    border-color: white;
+    color: white;
+}
+
+/* Footer */
+footer {
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    /* gap: 60px; */
+    padding: 30px;
+    /* height: 100px; */
+}
+
+.footer-social {
+    text-align: center;
+    border-right: 1px solid white;
+    padding: 20px;
+}
+
+.footer-social h2 {
+    color: white;
+    text-transform: uppercase;
+    font-family: var(--font-family-bebas);
+    letter-spacing: 3px;
+    font-size: 2rem;
+}
+
+.footer-social span {
+    color: #DBB52F;
+}
+
+.footer-social i {
+    font-size: 1.5rem;
+    color: white;
+    padding: 10px;
+}
+
+.email-list {
+    padding: 20px;
+}
+
+.email-list h2 {
+    color: white;
+    text-transform: uppercase;
+    font-family: var(--font-family-bebas);
+    letter-spacing: 3px;
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+.email-list span {
+    color: #DBB52F;
+}
+
+.email-list input {
+    padding: 5px;
+    background-color: transparent;
+    border: 2px white solid;
+    color: whitesmoke
+}
+
+.email-list button {
+    padding: 5px;
+    border: solid 1px white;
+    background-color: black;
+    color: white;
+    cursor: pointer;
 }
 
 
